# tyk-demo

./: .env.example  .gitignore  .yamllint.yaml  CONTRIBUTING.md  Dockerfile.runner  Makefile  README.md  Tyk Demo.postman_collection.json  add-gateway.sh  bootstrap-e2.sh  bootstrap-graphite.sh  bootstrap-jenkins.sh  bootstrap-kibana.sh  bootstrap-sso.sh  bootstrap-tls.sh  bootstrap-zipkin.sh  bootstrap.sh  bs.e2.sh  bs.jenkins.sh  bs.kibana.sh  bs.zipkin.sh  dashboard-sso.md  dc.e2.yml  dc.kibana.yml  developer-guide.md  development.postman_environment.json  docker-compose-command.sh  docker-compose-e2.yml  docker-compose-graphite.yml  docker-compose-jenkins.yml  docker-compose-kibana.yml  docker-compose-sso.yml  docker-compose-tls.yml  docker-compose-zipkin.yml  docker-compose.yml  down.sh  dump.sh  import.sh  publish.sh  setup-backstage.sh  (+6 more)
analytics/: README.md  bootstrap.sh  docker-compose.yml
bootstrap/: e2.sh  jenkins.sh  tls.sh  zipkin.sh
cicd/: README.md  bootstrap.sh  docker-compose.yml
confs/: profiles.json  pump.conf  tyk.conf  tyk_analytics.conf
deployments/plugin-python-grpc/: Dockerfile  README.md  bootstrap.sh  docker-compose.yml  pyproject.toml  requirements.txt  teardown.sh
deployments/plugin-python-grpc/data/keys/bearer-token/: bearer-token-1-grpc_hmac_key.json
deployments/plugin-python-grpc/scripts/: hmac.sh  test.sh
docker-compose/: e2.yml
docs/: ARCHITECTURE.md  FEATURE-DEPLOYMENTS.md  OPERATIONS.md  SETUP.md  TROUBLESHOOTING.md  feature-deployments.md  operations.md  test-scripts.md
instrumentation/: README.md  bootstrap.sh
(+1201 files in other folders)
